<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.LoginFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"></include>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textSize="50sp"
        android:fontFamily="@font/typer_roboto_light"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/tv_subtitle"
        android:layout_marginLeft="25dp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_tag"
        android:textSize="17sp"
        android:fontFamily="@font/typer_roboto_regular"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/send_email"
        android:layout_marginLeft="25dp" />

    <EditText
        android:id="@+id/send_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/typer_roboto_regular"
        android:background="@drawable/et_custom"
        android:layout_centerInParent="true"
        android:textSize="15sp" />



    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_custom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/send_email"
        android:fontFamily="@font/typer_roboto_regular"
        android:textColor="@android:color/white"
        android:text="@string/reset"/>



    <ProgressBar
        android:id="@+id/prgBr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerInParent="true" />

</RelativeLayout>


